@@ -2,6 +2,12 @@ package net.adoptopenjdk.icedteaweb.jvm;
 
 import org.junit.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -88,6 +94,101 @@ public class JvmUtilsTest {
             JvmUtils.checkVMArgs(javaVMArgs);
         } catch (IllegalArgumentException ile) {
             fail(ile.getMessage());
+        }
+    }
+
+    @Test
+    public void testJava9JavaVMArgs() {
+        final String javaVMArgs = "--add-modules=java.scripting,java.sql --add-exports=java.base/sun.security.util=ALL-UNNAMED --add-exports=java.base/sun.security.x509=ALL-UNNAMED --add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED --add-exports=java.desktop/com.sun.imageio.spi=ALL-UNNAMED --add-exports=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports=jdk.deploy/com.sun.deploy.config=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.desktop/javax.imageio.spi=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED";
+        try {
+            JvmUtils.checkVMArgs(javaVMArgs);
+        } catch (IllegalArgumentException ile) {
+            fail(ile.getMessage());
+        }
+
+        final String java_vm_args = "-Dsun.java2d.d3d=false -Dsun.java2d.dpiaware=false --add-opens=java.desktop/sun.print=ALL-UNNAMED --add-exports=java.desktop/sun.print=ALL-UNNAMED --add-exports=java.desktop/sun.swing=ALL-UNNAMED --add-exports=java.desktop/sun.swing.table=ALL-UNNAMED --add-exports=java.desktop/sun.swing.plaf.synth=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.tree=ALL-UNNAMED --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED --add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED --add-exports=java.desktop/com.sun.awt=ALL-UNNAMED --add-exports=java.base/sun.security.action=ALL-UNNAMED";
+        try {
+            JvmUtils.checkVMArgs(java_vm_args);
+        } catch (IllegalArgumentException ile) {
+            fail(ile.getMessage());
+        }
+
+        final String java_vm_bad_args = "-Dsun.java2d.d3d=false -Dsun.java2d.dpiaware=false  --add-opens=java.desktop/sun.print=ALL-UNNAMED --list-modules --add-exports=java.desktop/sun.print=ALL-UNNAMED --add-exports=java.desktop/sun.swing=ALL-UNNAMED --add-exports=java.desktop/sun.swing.table=ALL-UNNAMED --add-exports=java.desktop/sun.swing.plaf.synth=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.tree=ALL-UNNAMED --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED --add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED --add-exports=java.desktop/com.sun.awt=ALL-UNNAMED --add-exports=java.base/sun.security.action=ALL-UNNAMED";
+        try {
+            JvmUtils.checkVMArgs(java_vm_bad_args);
+            fail("Illegal arg accepted!");
+        } catch (IllegalArgumentException ile) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    public void testPredefModuleVMArgs() {
+
+        final List<String> result = JvmUtils.mergeJavaModulesVMArgs(Collections.emptyList());
+
+        assertEquals(JvmUtils.getPredefinedJavaModulesVMArgumentsMap().size(), result.size());
+        assertTrue(result.contains("--add-reads=java.base=ALL-UNNAMED,java.desktop"));
+        assertTrue(result.contains("--add-exports=java.desktop/sun.applet=ALL-UNNAMED,java.desktop,jdk.jsobject"));
+    }
+
+    @Test
+    public void testMergeJavaModuleVMArgs() {
+
+        final String[] usrStrArr = new String[] {"-DnoModuleArg=bbb", "--add-reads=java.base=ALL-UNNAMED,java.xxx"};
+        final List<String> usrDefArgs = new ArrayList(Arrays.asList(usrStrArr));
+
+        final List<String> result = JvmUtils.mergeJavaModulesVMArgs(usrDefArgs);
+        assertTrue(result.contains("-DnoModuleArg=bbb"));
+        assertTrue(result.contains("--add-reads=java.base=ALL-UNNAMED,java.desktop,java.xxx"));
+    }
+
+    @Test
+    public void testMergeDuplicateJavaModuleVMArgs() {
+
+        final String[] usrStrArr = new String[] {"-DnoModuleArg=bbb", "--add-reads=java.base=ALL-UNNAMED,java.xxx", "--add-reads=java.base=ALL-UNNAMED,java.yyy"};
+        final List<String> usrDefArgs = new ArrayList(Arrays.asList(usrStrArr));
+
+        final List<String> result = JvmUtils.mergeJavaModulesVMArgs(usrDefArgs);
+        assertTrue(result.contains("-DnoModuleArg=bbb"));
+        assertTrue(result.contains("--add-reads=java.base=ALL-UNNAMED,java.desktop,java.xxx,java.yyy"));
+    }
+
+    @Test
+    public void testNonPredefJavaModuleVMArgs() {
+        final String[] usrStrArr = new String[] {"-DnoModuleArg=bbb", "--module-path=java.base=java.xxx", "--add-opens=java.base=java.aaa", "--add-modules=java.base=java.bbb", "--patch-module=java.base=java.ccc", "--add-reads=java.base=ALL-UNNAMED,java.yyy"};
+        final List<String> usrDefArgs = new ArrayList(Arrays.asList(usrStrArr));
+
+        final List<String> result = JvmUtils.mergeJavaModulesVMArgs(usrDefArgs);
+        assertTrue(result.contains("-DnoModuleArg=bbb"));
+        assertTrue(result.contains("--add-reads=java.base=ALL-UNNAMED,java.desktop,java.yyy"));
+        assertTrue(result.contains("--module-path=java.base=java.xxx"));
+        assertTrue(result.contains("--add-opens=java.base=java.aaa"));
+        assertTrue(result.contains("--add-modules=java.base=java.bbb"));
+        assertTrue(result.contains("--patch-module=java.base=java.ccc"));
+    }
+
+    @Test
+    public void testValidJavaModuleVMArgs() {
+        final String javaVMArgs = "-Dsun.java2d.d3d=true --add-reads=java.base=ALL-UNNAMED,java.desktop,java.yyy --module-path=java.base=java.xxx --add-opens=java.base=java.aaa --add-modules=java.base=java.bbb --patch-module=java.base=java.ccc";
+
+        try {
+            JvmUtils.checkVMArgs(javaVMArgs);
+        } catch (IllegalArgumentException ile) {
+            fail(ile.getMessage());
+        }
+    }
+
+    @Test
+    public void testInvaldiJavaModuleVMArgs() {
+
+        final String usrArgs = "-Dsun.java2d.d3d=true --list-module=java.base=ALL-UNNAMED,java.xxx --add-reads=java.base=ALL-UNNAMED,java.yyy";
+
+        try {
+            JvmUtils.checkVMArgs(usrArgs);
+            fail("Illegal arg accepted!");
+        } catch (IllegalArgumentException ile) {
+            assertTrue(true);
         }
     }
 }
